--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,75 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    border: 0;
+    box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html{
+    font-size: 62.5%;
 }
+
+body{
+    font-family: 'sans-serif';
+    box-sizing: border-box;
+}
+
+.main-container{
+
+}
+
+.component-container{
+
+}
+
+.header{
+    width: 100%;
+    padding: 2.5rem 0;
+    background-color: #000;
+}
+
+.header-heading{
+    text-align: center;
+    color: #fff;
+    font-size: 2.2rem;
+}
+
+.component-body-container{
+    padding-left: 2rem;
+    padding-top: 2rem;
+    font-size: 1.8rem;
+}
+
+.grid-container{
+    font-weight: 300;
+    color: #000;
+    display: flex;
+}
+
+.grid-container > *:not(:last-child){
+    margin-right: 30%;
+}
+.heading-container{
+    margin: 3rem 0;
+    
+    color: #555;
+    font-weight: 500;
+    
+}
+
+.add, .delete{
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.add{
+    padding: 1rem 2.5rem;
+    background-color: green;
+    color: #fff;
+}
+
+.delete{
+    padding: 1rem 1.5rem;
+    background-color: #F20056;
+}
+
