Add contact form

--- a/src/index.css
+++ b/src/index.css
@@ -60,10 +60,11 @@ body{
     display: inline-block;
     text-decoration: none;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 .add{
-    padding: 1rem 2.5rem;
+    padding: .75rem 2.5rem;
     background-color: green;
     color: #fff;
 }
@@ -73,3 +74,52 @@ body{
     background-color: #F20056;
 }
 
+.person{
+    margin-left: 2rem;
+}
+
+.person-back{
+    text-decoration: none;
+    color: #333;
+    font-size: 1.7rem;
+    font-weight: 300;
+    cursor: pointer;
+    display: inline-block;
+    margin-left: 2rem;
+}
+
+.person-contact{
+    margin-top: 3rem;
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #555;
+}
+
+.person-value{
+    margin-bottom: 2rem;
+}
+
+.person-value-subscribe{
+    color: #00008b;
+}
+
+.person-contact-name, .person-contact-number{
+    margin-bottom: 2rem;
+}
+
+.person-contact-name-label, .person-contact-number-label{
+    display: block;
+}
+
+.person-contact-name-input, .person-contact-number-input{
+    border: 1px solid #777;
+    padding: .5rem 1rem;
+    width: 25rem;
+}
+
+.person-contact-name-input:focus, .person-contact-number-input:focus{
+    outline: none;
+}
+.person-contact-number-label{
+
+}
